--- a/react-app/src/pages/Login.css
+++ b/react-app/src/pages/Login.css
@@ -1,14 +1,22 @@
 .btn {
-    border: 0;
-    outline: 0;
-    background-color: #fff;
-    width: 90%;
-    text-align: center;
-    display: inline;
+  border: 0;
+  outline: 0;
+  padding: 10px;
+  background-color: #fff;
+  width: 90%;
+  text-align: center;
+  display: inline;
 }
 
-.btn img{
-    width: 200px;
-    height: 50px;
-    display: inline;
+.btn img {
+  width: 200px;
+  height: 50px;
+  display: inline;
+}
+
+.text_login {
+  margin: auto;
+  padding-top: 40px;
+  padding-bottom: 10px;
+  text-align: bottom;
 }
