--- a/react-app/src/pages/User.css
+++ b/react-app/src/pages/User.css
@@ -1,4 +1,19 @@
 .img {
-  height: 200px;
-  width: 200px;
+  height: 150px;
+  width: 150px;
+}
+
+.img-holder {
+  margin: auto;
+  padding-top: 10px;
+  padding-left: 500px;
+  text-align: left;
+}
+
+.form {
+  padding: 20px;
+}
+.form-group {
+  height: 50px;
+  padding: 10px;
 }
