--- a/react-app/src/pages/ComMain.css
+++ b/react-app/src/pages/ComMain.css
@@ -42,25 +42,53 @@
 }
 
 .left_box{
-    background-color: rgb(146, 146, 146);
+    background-color: rgb(192, 192, 192);
     height: 900px;
 }
-
+#main_log{
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 60px;
+}
 #profile_pic{
     margin-top: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
 }
-
-.profile p{
-    font-size: 30px;
+.profile span{
+    font-size: 40px;
     color: white;
     
 }
+.profile button{
+    margin-top: auto;
+    margin-bottom: 30px;
+    background-color: rgb(143, 143, 143);
+    color: white;
+    font-size: 20px;
+    padding: 20px;
+    border-radius: 20px;
+    cursor: pointer;
+    border : 0;
+    outline: 0;
+    transition:all 0.25s;
+}
+
+#logout_btn:hover{
+    background-color: rgb(100, 100, 100);
+}
+
+#logout_btn:active{
+    background-color: rgb(46, 45, 45);
+}
+
 
 .letf_box_bottom{
     background-color: white;
     border-radius: 30px 30px 0px 0px;
     border: 1px solid rgb(146, 146, 146);
-    padding-top: 50px;
+    padding-top: 25px;
 }
 .letf_box_bottom div{
     font-size: 30px;
@@ -92,5 +120,11 @@
     font-weight: 100;
     margin-bottom: 20px;
     color: rgb(146, 146, 146);
+    transition:all 0.25s;
+    cursor: pointer;
 }
 
+.content_list span:hover{
+    font-weight: bold;
+    color: rgb(102, 101, 101);
+}
