--- a/react-app/src/components/default.css
+++ b/react-app/src/components/default.css
@@ -37,3 +37,13 @@ button {
   background-color: inherit;
   font-size: 16px;
 }
+
+.loginIcon {
+  color: #fff;
+  width: 35%;
+  height: 50px;
+  background-color: #db6363;
+  padding: 7px;
+  border-radius: 100px;
+  padding-bottom: 5px;
+}
